<resources>
    <string name="app_name">220727-MotasemEsaefan-NYCSchools</string>
    <string name="school_name">School Name</string>
    <string name="location">Location</string>
    <string name="phone_number">Phone Number</string>
    <string name="image" />
    <string name="sat_scores">SAT SCORES</string>
    <string name="loading_schools">Loading Schools…</string>
    <string name="loading_score">Loading Score…</string>
    <string name="score_takers">Number of SAT Takers: %s</string>
    <string name="score_math">Math Average: %s</string>
    <string name="score_reading">Reading Average: %s</string>
    <string name="score_writing">Writing Average: %s</string>
    <string name="score_address">Address: %s</string>
    <string name="score_email">Email: %s</string>
    <string name="score_students">Total Students: %s</string>
    <string name="score_overview">Overview\n%s</string>
    <string name="score_empty">School does not have scores</string>
    <string name="back_to_schools">Back to Schools</string>
    <string name="additional_information">Additional Information</string>
    <string name="click_here">Click Here</string>
</resources>